# LoRa_Node

./: .gitignore  CMakeLists.txt  README.md
App/: app.c  app.h  uart_protocol.c
Core/Inc/: main.h
Core/Src/: main.c
Drivers/E22/: e22.c  e22.h
Drivers/Keyboard/: keyboard.c  keyboard.h
Drivers/OLED/: oled.c
firmware/: .mxproject  CMakeLists.txt  lora_node.ioc
firmware/App/: app.c  app.h  uart_protocol.c  uart_protocol.h
firmware/Core/Inc/: main.h
firmware/Core/Src/: main.c  stm32f1xx_it.c
firmware/Drivers/E22/: e22.c  e22.h
firmware/Drivers/Keyboard/: keyboard.c  keyboard.h
firmware/Drivers/OLED/: oled.c  oled.h
firmware/cmake/stm32cubemx/: CMakeLists.txt
hardware/: ProPrj_lora_node_2026-01-27_18-03-12.epro2
host/: CMakeLists.txt  build_mingw.bat  build_msvc.bat  main.cpp
